# LifeGame

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: life.rs  life_imp.rs  life_implementation.rs  life_interface.rs  main.rs
src/lib/: lib.rs
