[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game_of_life_gui"
path = "src/bin/main.rs"

[lib]
name = "life"
path = "src/lib/lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
pixels = "0.13"
winit = "0.28"
raw-window-handle = "0.5"
winit_input_helper = "0.14"